--- a/projeto.html
+++ b/projeto.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="stylesheet2.css">
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Página sobre Pug</title>
+    <title>Página sobre os pets Pug</title>
     <style>
         body {
             text-align: center;
@@ -47,7 +47,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1> Página sobre Pug </h1>
+    <h1> Página sobre Pet Pug </h1>
     <h2> Ésta página vai falar sobre a vida dos Pug</h2>
     <h3>Pug é uma raça de cão de companhia de pequeno porte, com focinho achatado e cauda enrolada. São cães braquicefálicos, ou seja, têm o focinho "achatado". 
         Cães com essa características tem o sistema respiratório superior comprimido e portanto não toleram muito exercício físico.</h3>
